[package]
name = "fluorite"
version = "0.2.3"
authors = ["Alyssa Riceman <alyssariceman@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1"
druid = "0.7"
pest = "2.1"
pest_derive = "2.1"
rand = "0.8"
rust_decimal = "1.14"
