[package]
name = "fluorite"
version = "0.2.6"
authors = ["Alyssa Riceman <alyssariceman@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1"
druid = "0.7"
lazy_static = "1.4"
pest = "2.1"
pest_derive = "2.1"
rand = "0.8"
rust_decimal = "1.14"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
